...
              child: ElevatedButton(
                style: ElevatedButton.styleFrom(
                  backgroundColor: Colors.red[700],
                ),
                onPressed: onLogout,
                child: const Text(
                  'LOGOUT',
                  style: TextStyle(color: Colors.white),
                ),
              ),
            ),
          ],
        ),
...
